--- a/EcoGameProject/Packages/manifest.json
+++ b/EcoGameProject/Packages/manifest.json
@@ -7,6 +7,7 @@
     "com.unity.2d.spriteshape": "4.1.2",
     "com.unity.2d.tilemap": "1.0.0",
     "com.unity.collab-proxy": "1.3.8",
+    "com.unity.device-simulator": "2.2.3-preview",
     "com.unity.ide.rider": "1.2.1",
     "com.unity.ide.visualstudio": "2.0.2",
     "com.unity.ide.vscode": "1.2.1",
